file reader working; variable select still not populating

--- a/who_map.html
+++ b/who_map.html
@@ -6,8 +6,9 @@
         <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
         crossorigin=""></script>
+        <script src="https://d3js.org/d3.v7.min.js" type="text/javascript"></script>
         <script src="who_map.js" type="text/javascript"></script>
-        <script src="life_expect_country_2000.json", type="text/javascript"></script>
+        <!-- <script src="life_expect_country_2000.json", type="text/javascript"></script> -->
         <link rel="stylesheet" type = "text/css" href="who_map.css">
     </head>
     <body>
