--- a/who_map.html
+++ b/who_map.html
@@ -8,7 +8,6 @@
         crossorigin=""></script>
         <script src="https://d3js.org/d3.v7.min.js" type="text/javascript"></script>
         <script src="who_map.js" type="text/javascript"></script>
-        <!-- <script src="life_expect_country_2000.json", type="text/javascript"></script> -->
         <link rel="stylesheet" type = "text/css" href="who_map.css">
     </head>
     <body>
@@ -18,6 +17,6 @@
             <select id="color-select"></select>
         </div>
         <div id="map"></div>
-        <div class="year-footer"></div>
+        <div id="year-footer"></div>
   </body>
 </html>
