--- a/who_map.html
+++ b/who_map.html
@@ -7,7 +7,10 @@
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
         crossorigin=""></script>
         <script src="https://d3js.org/d3.v7.min.js" type="text/javascript"></script>
-        <script src="who_map.js" type="text/javascript"></script>
+        <script src="legend.js" type="module"></script>
+        <!-- <script src="who_map.js" type="text/javascript"></script> -->
+        <script src="who_map.js" type="module"></script>
+        
         <link rel="stylesheet" type = "text/css" href="who_map.css">
     </head>
     <body>
@@ -17,6 +20,7 @@
             <select id="color-select"></select>
         </div>
         <div id="map"></div>
+        <div id="legend"></div>
         <div id="year-footer"></div>
   </body>
 </html>
